# NFL

./: .gitignore  CMakeLists.txt  README.md
flow_weights/: books-200M-80R-zipf_2D2H2L_weights.txt  fb-200M-0R-zipf_2D2H2L_weights.txt  lognormal-200M-100R-zipf_2D2H2L_weights.txt  longitudes-200M-100R-zipf_2D2H2L_weights.txt  longlat-200M-0R-zipf_2D2H2L_weights.txt  wiki-ts-200M-20R-zipf_2D2H2L_weights.txt  ycsb-200M-80R-zipf_2D2H2L_weights.txt
scripts/: benchmark.sh  bootstrap.sh  clear.sh  evaluate.sh  evaluate_workloads.sh  generate_configs.sh  generate_workloads.sh  load_result.py  load_results.sh  prepare_keys_for_flow.sh
src/: benchmark.cc  main.cc
src/afli/: afli.h  afli_nodes.h  buckets.h  conflicts.h  iterator.h
src/benchmark/: benchmark.h  kv_evaluator.h  workload.h
src/models/: bnaf.h  linear_model.h  numerical_flow.h
src/nfl/: nfl.h
src/util/: common.h  data_generator.cc  estimated_distribution.h  format_data.cc  nf_data_converter.cc
train/: README.md  assess_quality.py  data_util.py  distribution_transformer.py  numerical_flow.py  train_flow.sh
train/models/: __init__.py
train/models/BNAF/: __init__.py  bnaf.py
